WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269414
Fix guards of WKImageCairo
https://bugs.webkit.org/show_bug.cgi?id=269414
Summary
Fix guards of WKImageCairo
Don Olmstead
Reported
2024-02-14 16:09:25 PST
....
Attachments
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2024-02-14 16:13:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24464
EWS
Comment 2
2024-02-15 10:59:12 PST
Committed
274745@main
(4ce338dca093): <
https://commits.webkit.org/274745@main
> Reviewed commits have been landed. Closing PR #24464 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-15 11:00:15 PST
<
rdar://problem/123025062
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug