Fix guards of WKImageCairo https://bugs.webkit.org/show_bug.cgi?id=269414

Reviewed by Adrian Perez de Castro.

Prefer `USE(CAIRO)` over `USE(SKIA)` to guard implementation of API functions
in `WKImageCairo.cpp`.

* Source/WebKit/Shared/API/c/cairo/WKImageCairo.cpp:

Canonical link: https://commits.webkit.org/274745@main